...
                    <view key="view" contentMode="scaleToFill" id="jef-xG-r8P">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vif-LP-RMB">
                                <rect key="frame" x="168.5" y="599" width="39" height="30"/>
                                <state key="normal" title="Close"/>
                            </button>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="d4a-YF-Lrc">
                                <rect key="frame" x="16" y="20" width="343" height="150.5"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c99-DW-6Jx">
                                        <rect key="frame" x="0.0" y="0.0" width="343" height="50"/>
...
